- Push30 now has a Startropics enemy wandering about.
- Push38 has been given its proper skybox.
- Several misaligned sectors in Push43 have been re-aligned. Not all of them, but quite a few.
- Push48 has been given more even lighting across the board.
- All cvars have been changed to properly accomodate cvarinfo. Note that their prefix has been changed from push_* to p_*!

WHY WE CAN'T HAVE NICE DETAIL:
- It's no longer possible to dive into the Cacodemon's mouth in Push17 and hide there.
- The edges of Push31's banner have been pushed against the cake.
- It's no longer possible to hide behind the house in Push38.
- The torches in the Push38 house's corner have been brought in, to keep people from butthugging the corner.
- The hole in the center of Push39 has been risen up, and the pillars pulled back.


FROM V0.5 TO V0.6:
==================
GAMEPLAY:
- Cacodemons on Push17 are easier to hit and no longer so stupidly aggressive.
- The explosion radius of the grenade has been increased by 16 units, for slightly easier recoveries.
- The alt-fire of the gauntlet is now capable of reflecting shots away from the player. It's not graphically visible until a Zandronum bug is fixed, but it's an actual thing now nonetheless.
- Weapon switching is now a little under twice as fast.
- Both weapons' alt-fires had their WRF_NOSWITCH times slashed in half, meaning players will be able to swap to a different weapon much faster.
- The visor now tracks people better, updating its position in half the time as before.
- The Push laser speed has been increased from 400 to 450, and its radius increased from 3 to 4.
- The Push laser now fires straight at the crosshair, rather than 8 units underneath.
- A drawing utensil has been implemented as an extra key for the people who think of Push as a multiplayer MSPaint simulator.
- The F1 help screen is no longer the best but now is much more informative.
- The Doom pistol is now removed from the player on map enter.