@@ -1,7 +1,7 @@
 script 827 ENTER
 {
     delay(15);
-    if (GetCVar("deathmatch") != 1 || GetCvar("lastmanstanding") == 1) { terminate; }
+    if (GetCVar("deathmatch") != 1 || isLMS()) { terminate; }
     if (TimeExceeded > 15)
     {
         KickFromGame(PlayerNumber(), "Please wait until the current match has ended.");
@@ -14,7 +14,7 @@ script 828 OPEN
     delay(5);
     TimeExceeded = 0;
     delay(5);
-    if (GetCVar("deathmatch") != 1 || GetCvar("lastmanstanding") == 1) { terminate; }
+    if (GetCVar("deathmatch") != 1 || isLMS()) { terminate; }
     TimeExceeded = 0;
     PrintBold(s:"Fifteen seconds to join in.");
     while(1)
