@@ -43,13 +43,13 @@ actor PushPlayer : DoomPlayer
     States
     {
     Spawn:
-        PLAY A -1
+        PLAY A -1 BRIGHT
         Loop
     See:
-        PLAY ABCD 4 
+        PLAY ABCD 4 BRIGHT
         Loop
     Missile:
-        PLAY E 12 
+        PLAY E 12 BRIGHT
         Goto Spawn
     Melee:
         PLAY F 6 BRIGHT
@@ -94,10 +94,10 @@ actor PushPlayer : DoomPlayer
         TNT1 AAAAAAAAAAAAAAA 0 A_SpawnItemEx("DeathSpark",random(-10,10),random(-10,10),random(24,42),random(-150,150)/100.0,random(-150,150)/100.0,random(100,300)/300.0,random(-180,180),161)
         TNT1 AAAAAAAAA 0 A_SpawnItemEx("Binary0",random(-10,10),random(-10,10),random(24,42),random(-100,100)/150.0,random(-100,100)/150.0,random(100,300)/250.0,random(-180,180),160)
         TNT1 AAAAAAAAA 0 A_SpawnItemEx("Binary1",random(-10,10),random(-10,10),random(24,42),random(-100,100)/150.0,random(-100,100)/150.0,random(100,300)/250.0,random(-180,180),160)
-        PLAY HHH 2 A_FadeOut(0.1)
+        PLAY HHH 2 BRIGHT A_FadeOut(0.1)
         TNT1 A 0 A_NoBlocking
-        PLAY III 2 A_FadeOut(0.1)
-        PLAY JJJ 2 A_FadeOut(0.1)
+        PLAY III 2 BRIGHT A_FadeOut(0.1)
+        PLAY JJJ 2 BRIGHT A_FadeOut(0.1)
         PLAY Z 1
         TNT1 AAAAAAAAA 0 A_FadeIn(0.1)
         PLAY Z 1
