@@ -198,41 +198,29 @@ Actor LavaBall
   States
   {
   Spawn:
-    LVBL A 0 A_JumpIf(WaterLevel > 1, "Disappear")
-    LVBL AA 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
+    //LVBL AA 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     LVBL A 1 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
-    LVBL A 0 A_JumpIf(WaterLevel > 1, "Disappear")
-    LVBL AA 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
+    //LVBL AA 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     LVBL A 1 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
-    LVBL A 0 A_JumpIf(WaterLevel > 1, "Disappear")
-    LVBL AA 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
+    //LVBL AA 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     LVBL A 1 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
-    LVBL A 0 A_JumpIf(WaterLevel > 1, "Disappear")
-    LVBL AA 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
+    //LVBL AA 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     LVBL A 1 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
-    LVBL B 0 A_JumpIf(WaterLevel > 1, "Disappear")
-    LVBL BB 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
+    //LVBL BB 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     LVBL B 1 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
-    LVBL B 0 A_JumpIf(WaterLevel > 1, "Disappear")
-    LVBL BB 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
+    //LVBL BB 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     LVBL B 1 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
-    LVBL B 0 A_JumpIf(WaterLevel > 1, "Disappear")
-    LVBL BB 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
+    //LVBL BB 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     LVBL B 1 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
-    LVBL B 0 A_JumpIf(WaterLevel > 1, "Disappear")
-    LVBL BB 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
+    //LVBL BB 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     LVBL B 1 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
-    LVBL C 0 A_JumpIf(WaterLevel > 1, "Disappear")
-    LVBL CC 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
+    //LVBL CC 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     LVBL C 1 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
-    LVBL C 0 A_JumpIf(WaterLevel > 1, "Disappear")
-    LVBL CC 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
+    //LVBL CC 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     LVBL C 1 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
-    LVBL C 0 A_JumpIf(WaterLevel > 1, "Disappear")
-    LVBL CC 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
+    //LVBL CC 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     LVBL C 1 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
-    LVBL C 0 A_JumpIf(WaterLevel > 1, "Disappear")
-    LVBL CC 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
+    //LVBL CC 0 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     LVBL C 1 Bright A_SpawnItemEx("LavaBallTrail", Random(-2, 2), Random(-2, 2), Random(-2, 2), 0, 0, 0, 0, 128)
     Loop
   Disappear:
