@@ -27,6 +27,7 @@ actor "Push Gun" : Weapon
         TNT1 A 0 A_JumpIfInventory("DrawingToolReady",1,"DrawFire")
         TNT1 A 0 A_JumpIfInventory("WallHackVision",1,"Nope")
         TNT1 A 0 A_PlayWeaponSound("push/fire")
+        TNT1 A 0 A_GunFlash
         TNT1 A 0 A_JumpIfInventory("LevelIsTooBright",1,"BrightFire")
         TNT1 A 0 A_FireCustomMissile("LaserBullet",0,0,0,8)
         goto FireFinish
@@ -42,6 +43,7 @@ actor "Push Gun" : Weapon
         RGUN A 1 A_WeaponReady(WRF_NOFIRE | WRF_NOSWITCH)
         TNT1 A 0 A_PlayWeaponSound("push/altfire")
         TNT1 A 0 A_GiveInventory("SurfingCounter",1)
+        TNT1 A 0 A_GunFlash
         TNT1 A 0 A_JumpIfInventory("LevelIsTooBright",1,"BrightAltFire")
         TNT1 A 0 A_FireCustomMissile("PlasmaGrenade",0,0,0,0,0,5)
         goto AltFireFinish
@@ -69,6 +71,7 @@ actor "Push Gun" : Weapon
         loop
     DrawFire:
         TNT1 A 0 A_PlayWeaponSound("draw/draw")
+        TNT1 A 0 A_GunFlash
         TNT1 A 0 A_FireCustomMissile("DrawBullet",0,0,0,8)
         PGUN B 1 Bright A_WeaponReady(WRF_NOFIRE | WRF_NOSWITCH)
         TNT1 A 0 A_Refire
