@@ -68,6 +68,7 @@ POLISH:
 - Several misaligned sectors in Push43 have been re-aligned. Not all of them, but quite a few.
 - Push48 has been given more even lighting across the board.
 - All cvars have been changed to properly accomodate cvarinfo. Note that their prefix has been changed from push_* to p_*!
+- The Push Gun now has A_GunFlash in both of its states, so as to accomodate skins with custom firing sprites.
 
 WHY WE CAN'T HAVE NICE DETAIL:
 - It's no longer possible to dive into the Cacodemon's mouth in Push17 and hide there.
